--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -1,11 +1,12 @@
 button {
-    height: 20px;
-    width: 50px;
+    height: 30px;
+    width: 60px;
     outline: none;
     margin: 10px;
     border: none;
     border-radius: 15px 15px;
-    
+    font-size: medium;
+    display: inline;
   }
   
   button.current {
@@ -18,7 +19,8 @@ button {
   }
 
   div.timer-buttons {
-      text-align: center
+      text-align: center;
+
   }
 
   button.gear {
@@ -33,4 +35,8 @@ button {
 
 h1.title {
     text-align: center;
+}
+
+span.time {
+    font-size: xx-large;
 }
