--- a/pomodoro/options.css
+++ b/pomodoro/options.css
@@ -1,3 +1,14 @@
-body {
-    background-color: aliceblue;
-  }
+
+.background-category {
+    width: 300px;
+}
+
+.background-category button {
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+}
+
+.background-category button:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
