--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -55,3 +55,35 @@ span.time {
 a {
   text-decoration: none;
 }
+
+body{
+  background-color: aliceblue;
+}
+
+.background-category {
+  width: 300px;
+}
+
+.background-category button {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
+.background-category button:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.interval-presets {
+  width: 300px;
+}
+
+.interval-presets button {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
+.interval-presets button:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
