--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -69,10 +69,13 @@ body{
 }
 
 .background-category {
-  width: 300px;
+  width: 400px;
 }
 
 .background-category button {
+  width: 100px;
+  height: 50px;
+  text-align: center;
   opacity: 0.7;
   filter: alpha(opacity=70);
 }
@@ -87,11 +90,21 @@ body{
 }
 
 .interval-presets button {
-  opacity: 0.7;
+  opacity: 1;
   filter: alpha(opacity=70);
 }
 
 .interval-presets button:hover {
   opacity: 1;
   filter: alpha(opacity=100);
+}
+
+#background-9 {
+  color: white;
+}
+#background-12 {
+  color: white;
+}
+#background-10 {
+  color: white;
 }
