--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -68,11 +68,11 @@ body{
   background-color: aliceblue;
 }
 
-.background-category {
+.bg-category {
   width: 400px;
 }
 
-.background-category button {
+.bg-category button {
   width: 100px;
   height: 50px;
   text-align: center;
@@ -80,7 +80,7 @@ body{
   filter: alpha(opacity=70);
 }
 
-.background-category button:hover {
+.bg-category button:hover {
   opacity: 1;
   filter: alpha(opacity=100);
 }
@@ -99,12 +99,12 @@ body{
   filter: alpha(opacity=100);
 }
 
-#background-9 {
+#bg-9 {
   color: white;
 }
-#background-12 {
+#bg-12 {
   color: white;
 }
-#background-10 {
+#bg-10 {
   color: white;
 }
