new settings/back icon and font adjust

--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -1,51 +1,75 @@
 button {
-    height: 30px;
-    width: 60px;
-    outline: none;
-    margin: 10px;
-    border: none;
-    border-radius: 15px 15px;
-    font-size: medium;
-    display: inline;
-  }
+  height: 30px;
+  width: 60px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 15px 15px;
+  font-size: medium;
+  font-family: monospace;
+  display: inline;
+}
 
-  h2 {
-    text-align: center;
-  }
+h2 {
+  text-align: center;
+  font-family: monospace;
+}
 
-  button.interval {
-    height: 30px;
-    width: 80px;
-    outline: none;
-    margin: 10px;
-    border: none;
-    border-radius: 15px 15px;
-    font-size: medium;
-    display: inline;
-  }
-  
-  button.current {
-    box-shadow: 0 0 0 2px white,
-                0 0 0 4px black;
-  }
+button.interval {
+  height: 30px;
+  width: 80px;
+  font-family: monospace;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 15px 15px;
+  font-size: medium;
+  display: inline;
+}
 
-  div.circle {
-      text-align: center;
-  }
+button.current {
+  box-shadow: 0 0 0 2px white,
+              0 0 0 4px black;
+}
 
-  div.timer-buttons {
-      text-align: center;
+div.circle {
+  color: black;
+  margin-left: 95px;
+  margin-right: 95px;
+  border: none;
+  font-family: monospace;
+  border-radius: 15px 15px;
+  text-align: center;
+  background: rgba(255,235,205, 0.7);
+}
 
-  }
+div.timer-buttons {
+  text-align: center;
+  font-family: monospace;
+}
 
-  button.gear {
-    height: 10px;  
-    width: 10px;
-  }
-  
-  #close-image img {
-    height: 40px;  
-    width: 40px;
+.timer-buttons button {
+  background-color: lightsalmon;
+  opacity: 0.7;
+  border: 2px;
+}
+
+.timer-buttons button:hover {
+  opacity: 1;
+  background-color: lightcoral;
+}
+
+.gear {
+  background-color: transparent;
+}
+
+button.gear:hover {
+  background-color: mintcream;
+}
+
+#close-image img {
+  height: 40px;  
+  width: 40px;
 }
 
 #stop-button {
@@ -53,7 +77,8 @@ button {
 }
 
 h1.title {
-    text-align: center;
+  text-align: center;
+  font-family: monospace;
 }
 
 span.time {
@@ -64,15 +89,23 @@ a {
   text-decoration: none;
 }
 
+.bg-presets p {
+  margin : 10px;
+  font-size: x-large;
+  font-family: monospace;
+}
 
 .bg-category {
   width: 400px;
+  background-size: 100%;
 }
 
 .bg-category button {
   width: 100px;
   height: 50px;
-  text-align: center;
+  font-size: large;
+  font-family: monospace;
+  
   opacity: 0.7;
   filter: alpha(opacity=70);
 }
@@ -89,6 +122,7 @@ a {
 .interval-presets button {
   opacity: 1;
   filter: alpha(opacity=70);
+  font-family: monospace;
 }
 
 .interval-presets button:hover {
