--- a/pomodoro/timer.css
+++ b/pomodoro/timer.css
@@ -13,7 +13,10 @@ button {
 h2 {
   text-align: center;
   font-family: monospace;
+  font-size: large;
 }
+
+
 
 button.interval {
   height: 30px;
@@ -69,6 +72,7 @@ div.timer-buttons {
 }
 
 h1.title {
+  font-size: x-large;
   text-align: center;
   font-family: monospace;
 }
@@ -98,7 +102,6 @@ a {
   border: 1px solid grey;
   font-size: large;
   font-family: monospace;
-  
   opacity: 0.7;
   filter: alpha(opacity=70);
 }
@@ -110,12 +113,63 @@ a {
 
 .interval-presets {
   width: 400px;
+  text-align: center;
+}
+
+.interval-presets p {
+  text-align: left;
+  margin : 10px;
+  font-size: large;
+  font-family: monospace;
 }
 
 .interval-presets button {
-  opacity: 1;
-  filter: alpha(opacity=70);
+  background-color: papayawhip;
+  width: 75px;
+  height: 40px;
+  border: 1px solid grey;
+  font-size: large;
   font-family: monospace;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
+.interval-presets button:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.custom-time {
+  text-align: left;
+  margin : 10px;
+  font-family: monospace;
+}
+
+.custom-time p {
+  font-size: large;
+}
+
+.custom-time label {
+  font-size: medium;
+}
+
+#submit-times {
+  text-align: left;
+  background-color: lightsalmon;
+  width: 70px;
+  height: 30px;
+  border: 1px solid grey;
+  font-size: large;
+  font-family: monospace;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
+#submit-times:hover {
+  text-align: center;
+  background-color: lightcoral;
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 
 .interval-presets button:hover {
